--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "current-project",
+    "name": "servicify-backend",
     "version": "1.0.0",
-    "description": "",
+    "description": "servicify-backend developed with node and express",
     "main": "index.js",
     "scripts": {
         "start": "node index.js"
     },
-    "author": "",
+    "author": "Servicify Team",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
         "dependencies": "0.0.1",
         "express": "^4.16.4",
-        "mongoose": "^5.12.13"
+        "mongoose": "^6.9.0"
     },
     "devDependencies": {
         "dotenv": "^8.6.0",
